--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.19)
 project(FileExplorer LANGUAGES CXX)
 
-find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Widgets UiTools)
 
 qt_standard_project_setup()
 
@@ -31,6 +31,7 @@ target_link_libraries(FileExplorer
     PRIVATE
         Qt::Core
         Qt::Widgets
+        Qt6::UiTools
 )
 
 include(GNUInstallDirs)
